--- a/Bao/BlazorSolution/Components/Pages/Home.razor
+++ b/Bao/BlazorSolution/Components/Pages/Home.razor
@@ -7,5 +7,14 @@
 Welcome to your new app. <br/>
 Moin Moin! <br/>
 This is a simple Blazor application.
-Moin
-hello
+
+
+<div style="width: 100%; height: 600px;">
+    <iframe id="pdfFrame" 
+            src="/pdf" 
+            width="100%" 
+            height="100%" 
+            style="border: 1px solid #ccc;">
+        Your browser does not support PDFs.
+    </iframe>
+</div>
