Tutorial with D. Roth - Add Counter component to Home page - replace counter with text when >10 - add input field which runs OnInput function on input, which sets the text variable to the value of the input - add p tag that displays the value of the text variable

--- a/Bao/BlazorSolution/Components/Pages/Home.razor
+++ b/Bao/BlazorSolution/Components/Pages/Home.razor
@@ -8,6 +8,11 @@ Welcome to your new app. <br/>
 Moin Moin! <br/>
 This is a simple Blazor application.
 
+<br/>
+
+<Counter />
+
+<br/>
 
 <div style="width: 100%; height: 600px;">
     <iframe id="pdfFrame" 
