--- a/Bao/BlazorSolution/Components/Pages/Counter.razor
+++ b/Bao/BlazorSolution/Components/Pages/Counter.razor
@@ -5,15 +5,42 @@
 
 <h1>Counter</h1>
 
+@if (currentCount < 10) {
 <p role="status">Current count: @currentCount</p>
 
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+<button class="btn btn-primary" @onclick="IncrementCount">Click</button>
+}
+else {
+    <p>You win!</p>
+}
+
+<div class="mt-3">
+     <input @oninput="OnInput">
+@*     <button @onclick="OnClick">Clear</button> *@
+     <p>@text</p>
+</div>
 
 @code {
     private int currentCount = 0;
 
-    private void IncrementCount() {
+    string text = "";
+    
+    private void IncrementCount(MouseEventArgs obj) {
         currentCount++;
     }
+    
+    // async Task IncrementCountAsync() {
+    //     await Task.Delay(500);
+    //     currentCount+=2;
+    // }
+
+    private void OnInput(ChangeEventArgs obj) {
+        text = (string)obj.Value!;
+    }
+
+    // private void OnClick(MouseEventArgs e) {
+    //     text = "";
+    // }
+
 
 }
