Add QR code to the pdf with QuestPDF.Barcodes and ZXing.Net

--- a/Bao/BlazorSolution/Components/Pages/Home.razor
+++ b/Bao/BlazorSolution/Components/Pages/Home.razor
@@ -16,7 +16,7 @@ This is a simple Blazor application.
 
 <div style="width: 100%; height: 600px;">
     <iframe id="pdfFrame" 
-            src="/pdf" 
+            src="/pdf?code=https://noveltyemails.com/fuckyou.com" 
             width="100%" 
             height="100%" 
             style="border: 1px solid #ccc;">
