--- a/Bao/BlazorSolution/Components/App.razor
+++ b/Bao/BlazorSolution/Components/App.razor
@@ -10,12 +10,17 @@
     <link rel="stylesheet" href="@Assets["BlazorProject.styles.css"]"/>
     <ImportMap/>
     <link rel="icon" type="image/png" href="favicon.png"/>
-    <HeadOutlet/>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <link href="@Assets["_content/MudBlazor/MudBlazor.min.css"]" rel="stylesheet" />
+    <link href="_content/CodeBeam.MudBlazor.Extensions/MudExtensions.min.css" rel="stylesheet" />
+    <HeadOutlet @rendermode="new InteractiveServerRenderMode(prerender: false)"/>
 </head>
 
 <body>
-<Routes/>
 <script src="_framework/blazor.web.js"></script>
+<script src="_content/CodeBeam.MudBlazor.Extensions/MudExtensions.min.js"></script>
+<script src="@Assets["_content/MudBlazor/MudBlazor.min.js"]"></script>
+<Routes @rendermode="new InteractiveServerRenderMode(prerender: false)"/>
 </body>
 
 </html>
