--- a/Bao/BlazorSolution/Components/Dialogs/DTCreateSecurity.razor
+++ b/Bao/BlazorSolution/Components/Dialogs/DTCreateSecurity.razor
@@ -1,6 +1,11 @@
 <MudDialog>
     <TitleContent>
-        Create Security
+        <MudText
+            Typo="Typo.h5"
+            Align="Align.Center"
+        >
+            Create Security
+        </MudText>
     </TitleContent>
 
     <DialogContent>
@@ -18,7 +23,10 @@
 
     <DialogActions>
         <MudButton OnClick="@(() => MudDialog.Cancel())">Cancel</MudButton>
-        <MudButton Color="Color.Primary" OnClick="@(() => MudDialog.Close(DialogResult.Ok(new ReturnType(Name, ISIN))))">
+        <MudButton
+            Color="Color.Primary"
+            OnClick="@(() => MudDialog.Close(DialogResult.Ok(new ReturnType(Name, ISIN))))"
+        >
             OK
         </MudButton>
     </DialogActions>
@@ -26,10 +34,10 @@
 
 @code {
     [CascadingParameter] private IMudDialogInstance MudDialog { get; set; } = null!;
-    
+
     public record ReturnType(string Name, string ISIN);
 
     string Name { get; set; } = string.Empty;
-    
+
     string ISIN { get; set; } = string.Empty;
 }
