Add coloured headers for the datagrids, add MudAppBar & MudDrawer

--- a/Bao/BlazorSolution/Components/Dialogs/DTCreatePortfolio.razor
+++ b/Bao/BlazorSolution/Components/Dialogs/DTCreatePortfolio.razor
@@ -52,6 +52,7 @@
                         Step="10"
                         Required
                         @bind-Value="selectedSecurity.Percentage"
+                        Immediate
                     />
                 </div>
             </MudStack>
