--- a/Bao/BlazorSolution/Components/Layout/MainLayout.razor
+++ b/Bao/BlazorSolution/Components/Layout/MainLayout.razor
@@ -1,27 +1,54 @@
 ﻿@inherits LayoutComponentBase
-<MudThemeProvider />
-<MudPopoverProvider />
-<MudDialogProvider />
-<MudSnackbarProvider />
+<MudThemeProvider/>
+<MudPopoverProvider/>
+<MudDialogProvider/>
+<MudSnackbarProvider/>
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu/>
-    </div>
-
-    <main>
-        <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
-        </div>
-
-        <article class="content px-4">
+<MudLayout>
+    <MudAppBar
+        Elevation="1"
+        Style="background-image: linear-gradient(to right, rgb(5, 39, 103), rgb(58, 6, 71) 70%)"
+    >
+        <MudIconButton
+            Icon="@Icons.Material.Filled.Menu"
+            Color="Color.Inherit"
+            Edge="Edge.Start"
+            OnClick="@ToggleDrawer"
+        />
+        <MudSpacer/>
+        <h1
+            style="font-family: Herculanum"
+            class="mt-3"
+        >Báo's Blazor Project</h1>
+        <MudSpacer/>
+    </MudAppBar>
+    <MudDrawer
+        @bind-Open="@_open"
+        Variant="DrawerVariant.Temporary"
+        ClipMode="DrawerClipMode.Always"
+        Style="background-image: linear-gradient(to right, rgb(5, 39, 103), rgb(58, 6, 71) 200%)"
+        Width="120px"
+    >
+        <MudNavMenu Bordered Style="color:white">
+            <MudNavLink Href="/" Match="NavLinkMatch.All">Portfolio</MudNavLink>
+            <MudNavLink Href="/counter" Match="NavLinkMatch.All">Counter</MudNavLink>
+        </MudNavMenu>
+    </MudDrawer>
+    <MudMainContent Class="pt-16 px-16">
+        <MudContainer Class="mt-6">
             @Body
-        </article>
-    </main>
-</div>
+        </MudContainer>
+    </MudMainContent>
+</MudLayout>
 
 <div id="blazor-error-ui" data-nosnippet>
     An unhandled error has occurred.
-    <a href="." class="reload">Reload</a>
+    <a href="." class="reload" >Reload</a>
     <span class="dismiss">🗙</span>
 </div>
+
+@code{
+    private bool _open = false;
+
+    private void ToggleDrawer() => _open = !_open;
+}
