--- a/Bao/BlazorSolution/wwwroot/app.css
+++ b/Bao/BlazorSolution/wwwroot/app.css
@@ -58,3 +58,13 @@ h1:focus {
 .form-floating > .form-control-plaintext:focus::placeholder, .form-floating > .form-control:focus::placeholder {
     text-align: start;
 }
+
+.bao-header {
+    background-image: linear-gradient(to right, rgba(5, 39, 103, 0.5), rgba(58, 6, 71, 0.5) 70%);
+    color: white !important; /* doesn't work yet */
+    font-weight: 600 !important;
+}
+
+.bao-header span {
+    color: white !important;
+}
